reset line-height to avoid overlap

--- a/src/deployment/etc/templets/stylesheets/new_web/assets/css/base.css
+++ b/src/deployment/etc/templets/stylesheets/new_web/assets/css/base.css
@@ -25,6 +25,7 @@ h2 {
 
 h1, h2, h3, h4, h5, li, #author {
 	font-family: sans-serif;
+	line-height: normal;
 }
 
 p {
